[package]
name = "deconvolution"
version = "0.2.1"
edition = "2024"
rust-version = "1.96"
keywords = ["image", "deconvolution", "deblurring", "restoration", "fft"]
categories = ["algorithms", "computer-vision", "multimedia::images", "science"]
license = "MIT"
description = "Rust image deconvolution and restoration library."
exclude = [".github/**/*", ".tmp/**/*"]
readme = "README.md"
documentation = "https://docs.rs/deconvolution"
repository = "https://github.com/pbkx/deconvolution"
autobenches = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rayon"]
rayon = ["dep:rayon", "ndarray/rayon", "image/rayon"]
f16 = ["dep:half"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.17.2"
num-complex = "0.4.6"
rustfft = "6.4.1"
thiserror = "2.0.18"
rayon = { version = "1.12.0", optional = true }
rand = "0.10.1"
rand_distr = "0.6.0"
half = { version = "2.7.1", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "rl"
harness = false

[[bench]]
name = "blind"
harness = false

[[bench]]
name = "volume"
harness = false
